fix(v-select): fix comma selection spacing

--- a/src/stylus/components/_select.styl
+++ b/src/stylus/components/_select.styl
@@ -84,7 +84,7 @@ theme(v-select, 'v-select')
     &--comma
       align-items: center
       display: inline-flex
-      margin-right: 4px
+      margin: 7px 4px 7px 0
 
   &__slot
     align-items: center
